--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1772,30 +1772,16 @@ body {
   color: #ffffff;
 }
 .cid-qZ0Fx1eoh7 {
-  background-image: url("../../../assets/images/mbr-1-1920x1276.jpg");
+  background-color: #232323;
 }
 .cid-qZ0Fx1eoh7 H1 {
   color: #ffffff;
 }
-.cid-qZ0Ifkz5kS {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1-1920x1078.jpg");
+.cid-qZ0Fx1eoh7 B {
+  color: #ffffff;
 }
-.cid-qZ0Ifkz5kS .mbr-figure {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.cid-qZ0Ifkz5kS .mbr-figure img {
-  height: 100%;
-  margin: 0 auto;
-}
-@media (max-width: 991px) {
-  .cid-qZ0Ifkz5kS .mbr-figure img {
-    width: 100% !important;
-  }
+.cid-qZ0Fx1eoh7 P {
+  color: #ffffff;
 }
 .cid-qZ0MZImtni {
   padding-top: 90px;
